--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "use-scramble": "^2.2.15",
     "viem": "^2.20.0",
     "wagmi": "^2.12.7",
     "web3": "^4.12.1"
