Adds hash to commitments

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.0.2",
-    "hardhat": "^2.22.9"
+    "hardhat": "^2.22.9",
+    "web3": "^4.12.1"
   }
 }
