--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.52.1",
     "@web3auth/base": "^8.12.4",
+    "@web3auth/default-evm-adapter": "^8.12.4",
     "@web3auth/ethereum-provider": "^8.12.4",
     "@web3auth/metamask-adapter": "^8.12.4",
     "@web3auth/modal": "^8.12.4",
