--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ethsign/sp-sdk": "^0.7.3",
     "@nextui-org/react": "^2.4.6",
     "@tanstack/react-query": "^5.52.1",
     "@web3auth/base": "^8.12.4",
